bootstrap min + contrast fix

--- a/assets/style.css
+++ b/assets/style.css
@@ -102,7 +102,7 @@ body {
 .nav-pills .nav-link.active,
 .nav-pills .show > .nav-link {
   color: #fff;
-  background-color: #beb45a;
+  background-color: #062b16;
   border-radius: 0;
 }
 .nav-pills .nav-link {
